# scaffex

./: .gitignore  .scaffex.toml  Cargo.toml  README.md
src/: lib.rs  main.rs
