[package]
name = "scaffex"
version = "0.1.0"
authors = ["seanchen <seanchen11235@gmail.com>"]
edition = "2018"
description = "A language-agnostic utility for scaffolding exercise boilerplate files from solution files."
license-file = "LICENSE"
readme = "README.md"
repository = "https://gitub.com/seanchen1991/scaffex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
toml = "0.5.6"
ropey = "1.2.0"
serde = { version = "1.0.115", features = ["derive"] }

[[bin]]
path = "src/main.rs"
name = "scaffex"
